# Automation-system_git_won

./: readME.txt
GUI_turtle_220210/: CMakeLists.txt  package.xml
GUI_turtle_220210/msg/: GuiMsg.msg
GUI_turtle_220210/script/: gui_multiple.py  gui_test_topic.py
IWH_arm/iwh_arm/src/: IWH_pose_node_2.cpp
Vision/vision/src/: camera2_node_t.cpp  yay_opencv_box.cpp  yay_opencv_marker.cpp
turtle/GUI_turtle/: CMakeLists.txt  package.xml
turtle/GUI_turtle/msg/: GuiMsg.msg
turtle/turtle_shk/turtle_node/: CMakeLists.txt  package.xml  param.txt
turtle/turtle_shk/turtle_node/launch/: turtle_navi.launch
turtle/turtle_shk/turtle_node/maps/: map.pgm  map.yaml
turtle/turtle_shk/turtle_node/src/: turtle_node.cpp  turtle_sub.cpp
