<?xml version="1.0"?>
<package format="1">
<name>turtle_node</name>
<version>0.1.0</version>
<description>turtlebot3_navigation - publish goal</description>
<license>Apache License 2.0</license>
<author email="95kim2@gmail.com">shk</author>
<maintainer email="95kim2@gmail.com">shk</maintainer>
<url type="bugtracker">later</url>
<url type="repository">later</url>
<url type="website">later</url>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>roslib</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>actionlib</build_depend>
<build_depend>actionlib_msgs</build_depend>
<build_depend>tf2</build_depend>
<build_depend>move_base_msgs</build_depend>
<build_depend>rosgraph_msgs</build_depend>
<build_depend>GUI_turtle</build_depend>
<run_depend>roscpp</run_depend>
<run_depend>roslib</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>actionlib</run_depend>
<run_depend>actionlib_msgs</run_depend>
<run_depend>tf2</run_depend>
<run_depend>move_base_msgs</run_depend>
<run_depend>message_runtime</run_depend>
<run_depend>rosgraph_msgs</run_depend>
<run_depend>GUI_turtle</run_depend>
<export>
</export>
</package>
